--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ section .title::after {
 /* home section styling */
 .home {
   display: flex;
-  background: url("./assets/images/banner.JPG") no-repeat center;
+  background: url("/assets/images/banner.JPG") no-repeat center;
   height: 100vh;
   color: #fff;
   min-height: 500px;
